C2105140Parser.cpp

#include "SymbolTable.h"


// Generated from C2105140Parser.g4 by ANTLR 4.13.2


#include "C2105140ParserListener.h"
#include "C2105140ParserVisitor.h"

#include "C2105140Parser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct C2105140ParserStaticData final {
  C2105140ParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  C2105140ParserStaticData(const C2105140ParserStaticData&) = delete;
  C2105140ParserStaticData(C2105140ParserStaticData&&) = delete;
  C2105140ParserStaticData& operator=(const C2105140ParserStaticData&) = delete;
  C2105140ParserStaticData& operator=(C2105140ParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag c2105140parserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<C2105140ParserStaticData> c2105140parserParserStaticData = nullptr;

void c2105140parserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (c2105140parserParserStaticData != nullptr) {
    return;
  }
#else
  assert(c2105140parserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<C2105140ParserStaticData>(
    std::vector<std::string>{
      "start", "program", "unit", "var_declaration", "type_specifier", "declaration_list", 
      "func_declaration", "func_definition", "parameter_list", "compound_statement", 
      "statements", "statement", "expression_statement", "variable", "expression", 
      "logic_expression", "rel_expression", "simple_expression", "term", 
      "unary_expression", "factor", "arguments"
    },
    std::vector<std::string>{
      "", "'if'", "'else'", "'for'", "'while'", "'do'", "'break'", "'int'", 
      "'float'", "'double'", "'char'", "'string'", "'void'", "'return'", 
      "'switch'", "'case'", "'default'", "'continue'", "'='", "", "", "", 
      "", "'!'", "", "", "'('", "')'", "'{'", "'}'", "'['", "']'", "','", 
      "';'"
    },
    std::vector<std::string>{
      "", "IF", "ELSE", "FOR", "WHILE", "DO", "BREAK", "INT", "FLOAT", "DOUBLE", 
      "CHAR", "STRING", "VOID", "RETURN", "SWITCH", "CASE", "DEFAULT", "CONTINUE", 
      "ASSIGNOP", "INCOP", "RELOP", "LOGICOP", "BITOP", "NOT", "ADDOP", 
      "MULOP", "LPAREN", "RPAREN", "LCURL", "RCURL", "LSQUARE", "RSQUARE", 
      "COMMA", "SEMICOLON", "CONST_INT", "CONST_FLOAT", "CONST_CHAR", "STRING_LITERAL", 
      "ID", "WS", "COMMENT", "MULTILINE_COMMENT", "ERROR_CHAR"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  c2105140parserParserStaticData = std::move(staticData);
}

}

C2105140Parser::C2105140Parser(TokenStream *input) : C2105140Parser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

C2105140Parser::C2105140Parser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  C2105140Parser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *c2105140parserParserStaticData->atn, c2105140parserParserStaticData->decisionToDFA, c2105140parserParserStaticData->sharedContextCache, options);
}

C2105140Parser::~C2105140Parser() {
  delete _interpreter;
}

const atn::ATN& C2105140Parser::getATN() const {
  return *c2105140parserParserStaticData->atn;
}

std::string C2105140Parser::getGrammarFileName() const {
  return "C2105140Parser.g4";
}

const std::vector<std::string>& C2105140Parser::getRuleNames() const {
  return c2105140parserParserStaticData->ruleNames;
}

const dfa::Vocabulary& C2105140Parser::getVocabulary() const {
  return c2105140parserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView C2105140Parser::getSerializedATN() const {
  return c2105140parserParserStaticData->serializedATN;
}


//----------------- StartContext ------------------------------------------------------------------

C2105140Parser::StartContext::StartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* C2105140Parser::StartContext::EOF() {
  return getToken(C2105140Parser::EOF, 0);
}

C2105140Parser::ProgramContext* C2105140Parser::StartContext::program() {
  return getRuleContext<C2105140Parser::ProgramContext>(0);
}


size_t C2105140Parser::StartContext::getRuleIndex() const {
  return C2105140Parser::RuleStart;
}

void C2105140Parser::StartContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C2105140ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStart(this);
}

void C2105140Parser::StartContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C2105140ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStart(this);
}


std::any C2105140Parser::StartContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C2105140ParserVisitor*>(visitor))
    return parserVisitor->visitStart(this);
  else
    return visitor->visitChildren(this);
}

C2105140Parser::StartContext* C2105140Parser::start() {
  StartContext *_localctx = _tracker.createInstance<StartContext>(_ctx, getState());
  enterRule(_localctx, 0, C2105140Parser::RuleStart);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    initializeFiles();
    setState(45);
    antlrcpp::downCast<StartContext *>(_localctx)->p = program(0);
    setState(46);
    match(C2105140Parser::EOF);

            antlrcpp::downCast<StartContext *>(_localctx)->text =  antlrcpp::downCast<StartContext *>(_localctx)->p->text;
            logRule("start", _localctx->text);
            closeFiles();
        
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramContext ------------------------------------------------------------------

C2105140Parser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

C2105140Parser::UnitContext* C2105140Parser::ProgramContext::unit() {
  return getRuleContext<C2105140Parser::UnitContext>(0);
}

C2105140Parser::ProgramContext* C2105140Parser::ProgramContext::program() {
  return getRuleContext<C2105140Parser::ProgramContext>(0);
}


size_t C2105140Parser::ProgramContext::getRuleIndex() const {
  return C2105140Parser::RuleProgram;
}

void C2105140Parser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C2105140ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void C2105140Parser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C2105140ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any C2105140Parser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C2105140ParserVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}


C2105140Parser::ProgramContext* C2105140Parser::program() {
   return program(0);
}

C2105140Parser::ProgramContext* C2105140Parser::program(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  C2105140Parser::ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, parentState);
  C2105140Parser::ProgramContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 2;
  enterRecursionRule(_localctx, 2, C2105140Parser::RuleProgram, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(50);
    antlrcpp::downCast<ProgramContext *>(_localctx)->u = unit();
     antlrcpp::downCast<ProgramContext *>(_localctx)->text =  antlrcpp::downCast<ProgramContext *>(_localctx)->u->text; logRule("program", _localctx->text); 
    _ctx->stop = _input->LT(-1);
    setState(59);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        _localctx = _tracker.createInstance<ProgramContext>(parentContext, parentState);
        _localctx->p = previousContext;
        pushNewRecursionContext(_localctx, startState, RuleProgram);
        setState(53);

        if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
        setState(54);
        antlrcpp::downCast<ProgramContext *>(_localctx)->u = unit();
         antlrcpp::downCast<ProgramContext *>(_localctx)->text =  antlrcpp::downCast<ProgramContext *>(_localctx)->p->text + antlrcpp::downCast<ProgramContext *>(_localctx)->u->text; logRule("program", _localctx->text);  
      }
      setState(61);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- UnitContext ------------------------------------------------------------------

C2105140Parser::UnitContext::UnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

C2105140Parser::Var_declarationContext* C2105140Parser::UnitContext::var_declaration() {
  return getRuleContext<C2105140Parser::Var_declarationContext>(0);
}

C2105140Parser::Func_declarationContext* C2105140Parser::UnitContext::func_declaration() {
  return getRuleContext<C2105140Parser::Func_declarationContext>(0);
}

C2105140Parser::Func_definitionContext* C2105140Parser::UnitContext::func_definition() {
  return getRuleContext<C2105140Parser::Func_definitionContext>(0);
}


size_t C2105140Parser::UnitContext::getRuleIndex() const {
  return C2105140Parser::RuleUnit;
}

void C2105140Parser::UnitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C2105140ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUnit(this);
}

void C2105140Parser::UnitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C2105140ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUnit(this);
}


std::any C2105140Parser::UnitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C2105140ParserVisitor*>(visitor))
    return parserVisitor->visitUnit(this);
  else
    return visitor->visitChildren(this);
}

C2105140Parser::UnitContext* C2105140Parser::unit() {
  UnitContext *_localctx = _tracker.createInstance<UnitContext>(_ctx, getState());
  enterRule(_localctx, 4, C2105140Parser::RuleUnit);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(71);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(62);
      antlrcpp::downCast<UnitContext *>(_localctx)->v = var_declaration();
       antlrcpp::downCast<UnitContext *>(_localctx)->text =  antlrcpp::downCast<UnitContext *>(_localctx)->v->text; logRule("unit", _localctx->text); 
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(65);
      antlrcpp::downCast<UnitContext *>(_localctx)->fd = func_declaration();
       antlrcpp::downCast<UnitContext *>(_localctx)->text =  antlrcpp::downCast<UnitContext *>(_localctx)->fd->text; logRule("unit", _localctx->text); 
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(68);
      antlrcpp::downCast<UnitContext *>(_localctx)->ff = func_definition();
       antlrcpp::downCast<UnitContext *>(_localctx)->text =  antlrcpp::downCast<UnitContext *>(_localctx)->ff->text; logRule("unit", _localctx->text); 
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_declarationContext ------------------------------------------------------------------

C2105140Parser::Var_declarationContext::Var_declarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* C2105140Parser::Var_declarationContext::SEMICOLON() {
  return getToken(C2105140Parser::SEMICOLON, 0);
}

C2105140Parser::Type_specifierContext* C2105140Parser::Var_declarationContext::type_specifier() {
  return getRuleContext<C2105140Parser::Type_specifierContext>(0);
}

C2105140Parser::Declaration_listContext* C2105140Parser::Var_declarationContext::declaration_list() {
  return getRuleContext<C2105140Parser::Declaration_listContext>(0);
}


size_t C2105140Parser::Var_declarationContext::getRuleIndex() const {
  return C2105140Parser::RuleVar_declaration;
}

void C2105140Parser::Var_declarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C2105140ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVar_declaration(this);
}

void C2105140Parser::Var_declarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C2105140ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVar_declaration(this);
}


std::any C2105140Parser::Var_declarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C2105140ParserVisitor*>(visitor))
    return parserVisitor->visitVar_declaration(this);
  else
    return visitor->visitChildren(this);
}

C2105140Parser::Var_declarationContext* C2105140Parser::var_declaration() {
  Var_declarationContext *_localctx = _tracker.createInstance<Var_declarationContext>(_ctx, getState());
  enterRule(_localctx, 6, C2105140Parser::RuleVar_declaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73);
    antlrcpp::downCast<Var_declarationContext *>(_localctx)->t = type_specifier();
    setState(74);
    antlrcpp::downCast<Var_declarationContext *>(_localctx)->dl = declaration_list(0);
    setState(75);
    match(C2105140Parser::SEMICOLON);

            antlrcpp::downCast<Var_declarationContext *>(_localctx)->text =  antlrcpp::downCast<Var_declarationContext *>(_localctx)->t->text + " " + antlrcpp::downCast<Var_declarationContext *>(_localctx)->dl->text + ";";
            logRule("var_declaration", _localctx->text);
        
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Type_specifierContext ------------------------------------------------------------------

C2105140Parser::Type_specifierContext::Type_specifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* C2105140Parser::Type_specifierContext::INT() {
  return getToken(C2105140Parser::INT, 0);
}

tree::TerminalNode* C2105140Parser::Type_specifierContext::FLOAT() {
  return getToken(C2105140Parser::FLOAT, 0);
}

tree::TerminalNode* C2105140Parser::Type_specifierContext::VOID() {
  return getToken(C2105140Parser::VOID, 0);
}


size_t C2105140Parser::Type_specifierContext::getRuleIndex() const {
  return C2105140Parser::RuleType_specifier;
}

void C2105140Parser::Type_specifierContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C2105140ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType_specifier(this);
}

void C2105140Parser::Type_specifierContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C2105140ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType_specifier(this);
}


std::any C2105140Parser::Type_specifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C2105140ParserVisitor*>(visitor))
    return parserVisitor->visitType_specifier(this);
  else
    return visitor->visitChildren(this);
}

C2105140Parser::Type_specifierContext* C2105140Parser::type_specifier() {
  Type_specifierContext *_localctx = _tracker.createInstance<Type_specifierContext>(_ctx, getState());
  enterRule(_localctx, 8, C2105140Parser::RuleType_specifier);
